--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -35,6 +35,7 @@
               %td= beta_rounds[user.beta_round]
             %td
               = link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-default btn-xs'
+              = link_to 'Manage Profiles', admin_user_profiles_path(user), class: 'btn btn-default btn-xs'
               = link_to 'Delete', admin_user_path(user, context_params), :method => :delete, :data => { :confirm => "Are you sure you want to delete this account?" }, class: 'btn btn-danger btn-xs'
 
     = paginate @users
