--- a/app/views/survey_question_responses/_multiple_choice_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_fields.haml
@@ -20,8 +20,16 @@
       - if option.explanation.present?
         .sqr-option-explanation{data: {behavior: 'option-explantion', option_id: option.id}}= option.explanation
 
-- content_for :page_js do
-  :javascript
-      new App.MultipleChoiceForm({
-        multipleOptionResponses: #{@question_response.survey_question.use_multiple_response_form?.to_json}
-      })
+- if @form_selector.present?
+  - content_for :page_js do
+    :javascript
+        new App.MultipleChoiceForm({
+          multipleOptionResponses: #{@question_response.survey_question.use_multiple_response_form?.to_json}, formSelector: '#{@form_selector}'
+        })
+
+- else
+  - content_for :page_js do
+    :javascript
+        new App.MultipleChoiceForm({
+          multipleOptionResponses: #{@question_response.survey_question.use_multiple_response_form?.to_json}
+        })
