[#154092849] fix display bug

--- a/app/assets/stylesheets/helpers/_mixins.scss
+++ b/app/assets/stylesheets/helpers/_mixins.scss
@@ -144,6 +144,11 @@
   order: $val;
 }
 
+@mixin alignContent($val) {
+  -webkit-align-content: $val;
+  align-content: $val;
+}
+
 @mixin triangle-up($left, $right, $bottom, $color) {
   width: 0;
   height: 0;
