--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -20,6 +20,14 @@
   bottom: 0px;
   z-index: 1;
 }
+.added-by-expert-icon {
+  width: 1.5em;
+  height: 1.5em;
+  position: absolute;
+  left: -10px;
+  top: -10px;
+  z-index: 3;
+}
 .navbar-static-top__icon-circle {
   display: inline-block;
   width: 12px;
