adjust the basics in progress

--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -34,6 +34,7 @@ $blue-012: rgb(103, 130, 176); // #6782B0
 
 $tan-001: rgb(242, 221, 209); // #F2DDD1
 $tan-002: rgb(196, 170, 127); // #C4AA7F
+$tan-003: rgb(242, 226, 171); // #F2E2AB
 
 $orange-001: rgb(247, 153, 112); // #F79970
 $orange-002: rgb(241, 134, 88); // #F28658
