--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -395,3 +395,60 @@ label {
     margin-top: 18px;
   }
 }
+
+// start a new shopping trip edit the basics modal
+.bq-container {
+  color: #FFFFFF;
+  h1{
+    text-align: center;
+    margin-bottom: 46px;
+  }
+  label.control-label {
+    color: #FFFFFF;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 25px;
+  }
+  .form-group {
+    margin-bottom: 0px;
+  }
+}
+.bq-question-response {
+  margin-bottom: 60px;
+  position: relative;
+}
+.bq-explanations {
+  color: #FFFFFF;
+  text-align: center;
+  min-height: 48px;
+  position: absolute;
+  bottom: -40px;
+  left: 0px;
+  right: 0px;
+}
+form.edit_survey_response {
+  .radio_buttons label.control-label,
+  .check_boxes label.control-label {
+    display: block;
+  }
+  .radio,
+  .checkbox {
+    display: inline-block;
+  }
+  .radio label,
+  .checkbox label {
+    display: inline-block;
+    min-width: 158px;
+    text-align: center;
+    background-color: #FFFFFF;
+    margin-right: 13px;
+    margin-bottom: 16px;
+    padding: 19px 10px;
+    border: 1px solid $gray-005;
+    input {display: none;}
+  }
+  .radio label.selected,
+  .checkbox label.selected {
+    background-color: $tan-003;
+  }
+}
