--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -7,7 +7,8 @@
         = "#{@profile.name}'s Gift Recommendations"
       %p.lead.tan-002.ph2.text-center
         ="Wrapt found these items uniquely suited to #{@profile.name} based on her personality, passions, & purpose.".html_safe
-  = render 'gift_recommendation', gift: @gift_recommendations.first.gift
+  - if @gift_recommendations.any?
+    = render 'gift_recommendation', gift: @gift_recommendations.first.gift
 
 - if @render_loading_spinner
   = render 'application/loading', hidden: false
