--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -43,6 +43,7 @@
       = render 'layouts/footer'
 
     = render 'pjax_modal_frame'
+    = render 'pjax_modal_two_frame'
     = render_gift_basket if enable_gift_basket?
     - if @include_enhanced_ecommerce_analytics
       %script
