--- a/app/views/my_account/giftees/_header.haml
+++ b/app/views/my_account/giftees/_header.haml
@@ -12,7 +12,11 @@
         = link_to my_account_giftees_path() do
           = option[0]
 - page_header_action = capture_haml do
-  = link_to 'New Giftee', new_my_account_giftee_path, class: 'btn btn-sm btn-primary uppercase hidden-xs', data: {loads_in_pjax_modal: true}
+  -#
+    -# this is broken. I don't know that it ever worked
+    -# quick and dirty fix below until there is time to dig into js to make this work
+    = link_to 'New Giftee', new_my_account_giftee_path, class: 'btn btn-sm btn-primary uppercase hidden-xs', data: {loads_in_pjax_modal: true}
+  = link_to 'New Giftee', '#new-giftee', class: 'btn btn-sm btn-primary uppercase hidden-xs'
 .row
   .col-xs-12
     = render 'my_account/page_header', title: 'My Giftees', title_action: title_action, page_header_action: page_header_action
