--- a/app/views/my_account/giftees/index.haml
+++ b/app/views/my_account/giftees/index.haml
@@ -3,7 +3,12 @@
   .ma-giftees__container.pb3.mb5
     .row
       .col-xs-12.visible-xs.mb3
-        = link_to 'New Giftee', new_my_account_giftee_path, class: 'btn btn-sm btn-primary uppercase btn-block', style: 'margin-top: -18px;', data: {loads_in_pjax_modal: true}
+        -#
+          -# this is broken. I don't know that it ever worked
+          -# quick and dirty fix below until there is time to dig into js to make this work
+          = link_to 'New Giftee', new_my_account_giftee_path, class: 'btn btn-sm btn-primary uppercase btn-block', style: 'margin-top: -18px;', data: {loads_in_pjax_modal: true}
+        = link_to 'New Giftee', '#new-giftee', class: 'btn btn-sm btn-primary uppercase btn-block', style: 'margin-top: -18px;'
+
     .row
       .col-xs-12
         .ma-giftees
@@ -13,7 +18,7 @@
     .row
       .col-xs-12
         = paginate(@giftees)
-  .ma-giftees__start-quiz
+  .ma-giftees__start-quiz#new-giftee
     .row
       .col-xs-12
         %h2.about-page__header Find Gifts for Someone New
