[#154349453] basic flag on survey questions

--- a/app/views/admin/survey_questions/edit_multiple_choice.haml
+++ b/app/views/admin/survey_questions/edit_multiple_choice.haml
@@ -7,6 +7,7 @@
 
       .form-inputs.pt4
         = form.input :prompt
+        = form.input :basic, label: 'Include question in adjust the basics form?'
         = form.input :code, hint: '(required for importing)'
         = form.association :survey_section, as: :select, collection: @survey.sections, include_blank: false, label: 'Section'
 
