--- a/app/views/admin/survey_questions/edit.haml
+++ b/app/views/admin/survey_questions/edit.haml
@@ -9,6 +9,7 @@
 
       .form-inputs.mb4
         = form.input :prompt
+        = form.input :basic, label: 'Include question in adjust the basics form?'
         = form.input :code, hint: '(required for importing)'
         = form.association :survey_section, as: :select, collection: @survey.sections, include_blank: false, label: 'Section'
         = render form_fields_partial(@survey_question), form: form
