--- a/app/views/admin/survey_questions/new.haml
+++ b/app/views/admin/survey_questions/new.haml
@@ -7,6 +7,7 @@
 
       .form-inputs
         = f.input :prompt
+        = f.input :basic, label: 'Include question in adjust the basics form?'
         = f.input :type, as: :select, collection: SurveyQuestion::TYPES, include_blank: false, label_method: :last, value_method: :first, label: "Question Type"
         = f.association :survey_section, as: :select, collection: @survey.sections, include_blank: false, label: 'Section'
 
