--- a/app/assets/stylesheets/modules/_modals.scss
+++ b/app/assets/stylesheets/modules/_modals.scss
@@ -61,6 +61,8 @@
 
 // modal styles for blue modal
 #pjax-modal-two {
+  color: #FFFFFF;
+  text-align: center;
   .modal-header .close {
     background-color: transparent;
   }
