--- a/app/views/survey_question_responses/show.html.haml
+++ b/app/views/survey_question_responses/show.html.haml
@@ -36,3 +36,8 @@
 - content_for :page_js do
   :javascript
     new App.PrevButtonBehavior()
+
+- if @open_new_shopping_trip_modal
+  - content_for :page_js do
+    :javascript
+      new App.PjaxModalTwoLoader('#{new_my_account_shopping_trip_path}', {backdrop: 'static'})
