--- a/app/views/giftee_survey_responses/index.haml
+++ b/app/views/giftee_survey_responses/index.haml
@@ -1,4 +1,5 @@
--# TODO: Remove this is just for testing and dev
+-# just shows a list of a profile's survey_responses
+-# Route has been removed but can be added for debugging
 .container
   %table
     %tr
