testing and improvements to recs

--- a/app/views/admin/gift_recommendation_sets/edit.haml
+++ b/app/views/admin/gift_recommendation_sets/edit.haml
@@ -84,15 +84,16 @@
 
                 %p
                   :ruby
-                    statuses = [gift.availability_string]
-                    statuses << (rec.viewed? ? "Viewed" : "Not Viewed")
+                    statuses = []
+                    statuses <<"Gift is #{gift.availability_string}"
+                    statuses << "Recommendation not viewed" if !rec.viewed?
                   #{statuses.join(", ")}
                   
                 %p
                   :ruby
                     statuses = []
-                    statuses << "Added at #{format_datetime(rec.created_at)}"
-                    statuses << "Viewed at #{format_datetime(rec.viewed_at)}" if rec.viewed_at.present?
+                    statuses << "Added: #{format_datetime(rec.created_at)}"
+                    statuses << "Viewed: #{format_datetime(rec.viewed_at)}" if rec.viewed_at.present?
                   #{statuses.join(", ")}
                                   
               .save-notice
