update gift recommendations page logic

--- a/app/views/gift_recommendations/_gift_indicators.haml
+++ b/app/views/gift_recommendations/_gift_indicators.haml
@@ -13,20 +13,18 @@
       - @gift_recommendations.each_with_index do |gr, i|
         = render 'gift_indicator', gr: gr, mobile: false, index: i
     .clearfix
-      - if @page != @next_page
+      - if @page < @next_page
         .pull-right
-          - if @profile.has_viewed_initial_recommendations?
-            = link_to 'NEXT', giftee_gift_recommendations_path(@giftee_id, carousel_page: @next_page), class: 'btn btn-default btn-xs btn-default__white'
-          - else
-            -# old behavior
-            -# leaving around until I confirm new behavior is right
-            -#= link_to 'NEXT', giftee_more_recommendations_path(@giftee_id), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_carousel_load_more: true}
-            = link_to 'NEXT', giftee_survey_response_copy_path(@profile, @profile.last_survey), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
-      - unless @profile.has_viewed_initial_recommendations?
-        .text-center
-          = link_to 'GET MORE RECOMMENDATIONS!', giftee_survey_response_copy_path(@profile, @profile.last_survey), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
+          = link_to 'NEXT', giftee_gift_recommendations_path(@giftee_id, carousel_page: @next_page), class: 'btn btn-default btn-xs btn-default__white'
+      - elsif @page == @next_page && @profile.can_generate_more_recs?
+        .pull-right
+          = link_to 'NEXT', giftee_survey_response_copy_path(@profile, @profile.last_survey, append: '1'), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
 
       - if @page > 1
         .pull-left
           = link_to 'PREVIOUS', giftee_gift_recommendations_path(@giftee_id, carousel_page: @prev_page), class: 'btn btn-default btn-xs btn-default__white'
+
+      - if @profile.can_generate_more_recs?
+        .text-center
+          = link_to 'GET MORE RECOMMENDATIONS!', giftee_survey_response_copy_path(@profile, @profile.last_survey, append: '1'), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
 
