--- a/app/views/giftee_survey_responses/new.haml
+++ b/app/views/giftee_survey_responses/new.haml
@@ -4,7 +4,7 @@
   = simple_form_for :shopping_trip, url: giftee_survey_responses_path(@profile), html: {class: 'shopping-trip-form', data: {submits_to_pjax_modal_two: true}} do |f|
     - collection = @relationship_profiles.map{|r| [r.id, r.name]}
     = f.input :profile_id, as: :radio_buttons , collection: collection, value_method: :first, label_method: :last, label: false
-    %button(pjax-modal-close type="button" class="someone-new-btn") Someone New
+    %button(pjax-modal-close type="button" class="someone-new-btn") Take Quiz for Someone New
 
 - content_for :page_js do
   :javascript
