commented out the AdWords as it was for the wrong version of AdWords

--- a/app/views/ecommerce/checkout/finalize.haml
+++ b/app/views/ecommerce/checkout/finalize.haml
@@ -34,7 +34,7 @@
 
   = render "debug", customer_order: @customer_order
 
-= render 'adwords'
+-# = render 'adwords'
 = content_for :page_js do
   :javascript
     //Google Analytics Enhanced Ecommerce
